--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,39 +7,37 @@
     <title>White Oar River Recreation</title>
 </head>
 <body>
-    <header>
-        <div>
-            <section id="Logo">
-                <a href="index.html">
-                    <img class="logo" src="images/circlelogoTemplet.jpg" alt="circlelogoTemplet">
+<header>
+                
+    <a id="logo" href="index.html">
+        <img class="logo" src="images/circlelogoTemplet.jpg" alt="circlelogoTemplet">
+    </a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Page 2</a>
+        <a href="site-plan-rafting.html">Site Plan</a>
+        <a href="contactus.html">Contact Us</a>
+    </nav>
+
+</header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">
+                Have An Adventure
+            </h1> 
+            <h4> Make Memories with Dry Oar
+            </h4>
+            <div class="button-box">
+                <a class="book" href="contactus.html" >
+                    Book Now
                 </a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
-            </section>
-
-
-
-            <div id="hero">
-                <div id="hero-img" src="images/hero.png" alt="People enjoying rafting">
-                </div>
-                <div id="hero-box">
-                    <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
-                </div>
-                <section id="hero-msg">
-                    <h1 class="home-title">
-                        Have An Adventure
-                    </h1> 
-                    <h4> Make Memories with Dry Oar
-                    </h4>
-                    <div class="button-box">
-                        <a class="book" href="contactus.html" >
-                            Book Now
-                        </a>
-                    </div>
-                </section>
-
             </div>
+        </section>
+
+    </div>
 
 
         </div>
@@ -79,7 +77,7 @@
 
         </div>
 
-    </header>
+    
     <footer>
         <p>White Oar River Recreation &copy; 2022 - Rune Larsen</p>
         <p><a href="site-plan-rafting.html">site plan</a></p>
