--- a/wwr/index.html
+++ b/wwr/index.html
@@ -40,7 +40,7 @@
     </div>
 
 
-        </div>
+        
         <div>
             <main class="home-grid">
 
@@ -48,23 +48,18 @@
             <section class="rivers-card"> 
                 <img class="card-image" src="images/rivers.jpg" alt="river in the forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon"> 
-                <h2>
+                <h2>Rivers</h2>
 
-                </h2>
             </section>  
             <section class="camping-card"> 
                 <img class="card-image" src="images/camping.jpg" alt="tent in the mountain">
                 <img class="icon" src="images/fire_icon.png" alt="fire icon"> 
-                <h2> 
-
-                </h2>
+                <h2>Camping</h2>
             </section> 
             <section class="rapids-card"> 
                 <img class="card-image" src="images/rapids.jpg" alt="rafting boat">
                 <img class="icon" src="images/oars.png" alt="oars icon"> 
-                <h2>
-
-                </h2>
+                <h2>Rapids</h2>
             </section>
             <img class="mountains" src="images/mountains.jpg" alt="misty mountains"> 
             <section class="msg">
