--- a/wwr/index.html
+++ b/wwr/index.html
@@ -75,7 +75,7 @@
     
     <footer>
         <p>White Oar River Recreation &copy; 2022 - Rune Larsen</p>
-        <p><a href="site-plan-rafting.html">site plan</a></p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <p><a href="facebook.com">
