--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Oar River Recreation</title>
+    <!-- <link rel="stylesheet" href="styles/styles2.css"> -->
+    <!-- HTML: https://validator.w3.org/
+        CSS: https://jigsaw.w3.org/css-validator/ -->
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
@@ -63,6 +66,7 @@
                 <img class="icon" src="images/oars.png" alt="oars icon"> 
                 <h2>Rapids</h2>
             </section>
+            <div id="background"></div> 
             <img class="mountains" src="images/mountains.jpg" alt="misty mountains"> 
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
