--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
     </nav>
 
 </header>
-    <div id="hero">
+    <div class="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
         </div>
