--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,7 +49,7 @@
         <div>
             <main class="home-grid">
 
-            </main> 
+            </mainstreet> 
             <section class="rivers-card"> 
                 <img class="card-image" src="images/rivers.jpg" alt="river in the forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon"> 
