--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>The Only Personal Site Plan</h1>
+      <h2>Rune Larsen</h2>
+      <h2>WDD 130-30</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,11 +21,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>To be able to show off both my skills with HTML and CSS, as well as all my skills and talents that are listed on my resume that I have accumulated over many years.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>IT and hiring managers that have need for someone with my skills to expand the expertise in their organisation.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
