--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>The Only Rune site Plan</h1>
+      <h2>Rune Larsen</h2>
+      <h2>WDD 130-30</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
