--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -21,11 +21,12 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>To be able to show off both my skills with HTML and CSS, as well as all my skills and talents that are listed on my resume that I have accumulated over many years.</p>  <!-- change this -->
+  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>IT and hiring managers that have need for someone with my skills to expand the expertise in their organisation.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
