--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -53,7 +53,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#04a9e0]</td><td class="secondary">[#191fe0]</td><td class="accent1">[#2ee026]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#04a9e0]</td><td class="secondary">[#191fe0]</td><td class="accent1">[#2ee026]</td><td class="accent2">[#2ee026]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
