--- a/rune/site-plan.html
+++ b/rune/site-plan.html
@@ -10,11 +10,9 @@
 
   <body>
     <header>
- theonlyruneyouknow-patch-1
-      <h1>The Only Personal Site Plan</h1>
-=======
+      
       <h1>The Only Rune site Plan</h1>
- main
+
       <h2>Rune Larsen</h2>
       <h2>WDD 130-30</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -26,10 +24,9 @@
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>To be able to show off both my skills with HTML and CSS, as well as all my skills and talents that are listed on my resume that I have accumulated over many years.</p>  <!-- change this -->
- theonlyruneyouknow-patch-1
-=======
+ 
   <!-- change this -->
- main
+
 
 
       <h3>Audience</h3>
@@ -71,7 +68,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font is: Indie Flower  <!-- change this -->
+        Heading Font: Indie Flower  <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Raleway  <!-- change this -->
