--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -123,7 +123,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/rafting-wireframe-pg2.png" alt="page2 page wireframe" />
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
