--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -123,7 +123,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-    <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/c5204933fc193c8a69402fa1db2610d92364b4c0/wwr/rafting_images/rafting-wireframe-pg2.png" alt="page2 page wireframe" />
+    <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/c5204933fc193c8a69402fa1db2610d92364b4c0/wwr/rafting_images/rafting-wireframe-pg2.png" alt="page 2 wireframe" />
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
