--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -93,8 +93,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Resume of Rune Larsen</a>
+        <a href="#">Contact Me</a>
       </nav>
       <hr>
       <h2>
@@ -105,7 +105,7 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Resume ] <!-- change this -->
         </div>
         <div class="sm-page3">
           [Page3]  <!-- change this -->
