--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -105,10 +105,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Resume ] <!-- change this -->
+          [Resume of Rune Larsen] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [Contact Me]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -130,30 +130,56 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [This is a quick insite to the quality and qualifications you will find that I have aquirred through my life experiences and learning. ]
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Resume of Rune Larsen]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Here is the wast skills from my jobs I have had in my career. ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+        <img src="https://en.wikipedia.org/wiki/The_Register-Guard#/media/File:Register-Guard_building_-_Eugene_Oregon.jpg" alt="The_Register-Guard">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/266765199_323399556457576_6516899427952248976_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=saFKG-pWKGsAX9PuKgD&tn=MkORWtb153TqqLk0&_nc_ht=scontent-sjc3-1.xx&oh=00_AT_sb5G3MKopZXzlesElWkNW1OgHYS_084htmkRh8GzKdg&oe=634A9FF4" alt="logo for FCR">
+        <img src="https://www.kellersupply.com/_images/KELLER_reflexBlueCVC.svg" alt="logo for keller supply Company">
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[Contact Me]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Contact me by sending me an email, text, or even forward my resume to someone you think would appriciate my talents.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.sqlsplus.com%2Fwp-content%2Fuploads%2F2020%2F08%2FOracle-PL-SQL-tutorial.png&imgrefurl=https%3A%2F%2Fwww.sqlsplus.com%2Foracle-pl-sql-tutorial%2F&tbnid=d0KC5C1RklVLoM&vet=12ahUKEwisoL3BvNf6AhX1MTQIHRT1AvcQMygFegUIARDJAQ..i&docid=as_mSfkwMttGbM&w=880&h=440&q=ORACLE%20PL%2FSQL%20icon&ved=2ahUKEwisoL3BvNf6AhX1MTQIHRT1AvcQMygFegUIARDJAQ" 
+        alt="ORACLE PL/SQL">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffavpng.com%2Fpng_view%2Fmicrosoft-microsoft-sql-server-sql-server-management-studio-computer-servers-png%2F0TbRfszw&psig=AOvVaw1vY7lbd-eZyKllc4evdm3d&ust=1665553695417000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOiFhZW91_oCFQAAAAAdAAAAABAJ" 
+        alt="MS SQL">
 
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.icon-icons.com%2Ficons2%2F2699%2FPNG%2F512%2Fmysql_logo_icon_169941.png&imgrefurl=https%3A%2F%2Ficon-icons.com%2Ficon%2Fmysql-logo%2F169941&tbnid=Yef7W23va16dDM&vet=12ahUKEwjk_PmUvtf6AhUSCDQIHXu3CSoQMygCegUIARDSAQ..i&docid=plbgV1B2C6Mc1M&w=512&h=256&q=MySQL%20icon&ved=2ahUKEwjk_PmUvtf6AhUSCDQIHXu3CSoQMygCegUIARDSAQ" 
+        alt="MySQL">
+
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.python.org%2Fstatic%2Fcommunity_logos%2Fpython-logo-master-v3-TM-flattened.png&imgrefurl=https%3A%2F%2Fwww.python.org%2Fcommunity%2Flogos%2F&tbnid=qL-WVdd5xikuuM&vet=12ahUKEwiq9PCpvtf6AhXdMDQIHX-7AWwQMygCegUIARDvAQ..i&docid=ZIk6oEy_LSc-sM&w=601&h=203&q=Python%20icon&ved=2ahUKEwiq9PCpvtf6AhXdMDQIHX-7AWwQMygCegUIARDvAQ" 
+        alt="Python">
+
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.php.net%2Fimages%2Flogos%2Fnew-php-logo.svg&imgrefurl=https%3A%2F%2Fwww.php.net%2Fdownload-logos.php&tbnid=j1itUWnOMiF45M&vet=12ahUKEwjOl8O_vtf6AhW7ATQIHbK8DUUQMygAegUIARDhAQ..i&docid=stZFRta4RJZkvM&w=711&h=384&q=PHP%20icon&ved=2ahUKEwjOl8O_vtf6AhW7ATQIHbK8DUUQMygAegUIARDhAQ" 
+        alt="PHP">
+
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fjs_5968292&psig=AOvVaw1bcbZBPYYStg7exbHfo7SL&ust=1665554104422000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCMDsndi-1_oCFQAAAAAdAAAAABAE" 
+        alt="JavaScript">
+
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.icon-icons.com%2Ficons2%2F2415%2FPNG%2F512%2Fjava_original_wordmark_logo_icon_146459.png&imgrefurl=https%3A%2F%2Ficon-icons.com%2Ficon%2Fjava-original-wordmark-logo%2F146459&tbnid=Y-F2pHG745OGbM&vet=12ahUKEwixvZz_vtf6AhVALzQIHexfD1gQMygDegUIARDqAQ..i&docid=8HVk31ijITHsOM&w=512&h=512&q=Java%20icon&ved=2ahUKEwixvZz_vtf6AhVALzQIHexfD1gQMygDegUIARDqAQ" 
+        alt="Java">
+
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-icons-png.flaticon.com%2F512%2F5968%2F5968242.png&imgrefurl=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fcss-3_5968242&tbnid=6mPxM3K1ngX24M&vet=12ahUKEwjSsuaUv9f6AhX1MTQIHRT1AvcQMygAegUIARDiAQ..i&docid=_c3San-5Uy4CMM&w=512&h=512&q=CSS%20icon&ved=2ahUKEwjSsuaUv9f6AhX1MTQIHRT1AvcQMygAegUIARDiAQ" 
+        alt="CSS">
+
+        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.windowsreport.com%2Fwp-content%2Fuploads%2F2019%2F07%2FFix-power-bi-cant-find-app.jpg&imgrefurl=https%3A%2F%2Fwindowsreport.com%2Fpower-bi-cant-find-app%2F&tbnid=nkjYiN1RvGgm-M&vet=12ahUKEwjgpeCtv9f6AhVRLzQIHUI_DdUQMygBegUIARDPAQ..i&docid=QLf7bmj7RoiUqM&w=1200&h=1200&q=Power%20BI%20icon&ved=2ahUKEwjgpeCtv9f6AhVRLzQIHUI_DdUQMygBegUIARDPAQ" 
+        alt="Power BI">
+       <!-- 
+        <img src="#" 
+        alt="image for page3">
+-->
       </ul>
       <hr>
       <h2>
