--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -151,30 +151,35 @@
         [Contact me by sending me an email, text, or even forward my resume to someone you think would appriciate my talents.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.sqlsplus.com%2Fwp-content%2Fuploads%2F2020%2F08%2FOracle-PL-SQL-tutorial.png&imgrefurl=https%3A%2F%2Fwww.sqlsplus.com%2Foracle-pl-sql-tutorial%2F&tbnid=d0KC5C1RklVLoM&vet=12ahUKEwisoL3BvNf6AhX1MTQIHRT1AvcQMygFegUIARDJAQ..i&docid=as_mSfkwMttGbM&w=880&h=440&q=ORACLE%20PL%2FSQL%20icon&ved=2ahUKEwisoL3BvNf6AhX1MTQIHRT1AvcQMygFegUIARDJAQ" 
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/Oracle-PL-SQL.png" 
         alt="ORACLE PL/SQL">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffavpng.com%2Fpng_view%2Fmicrosoft-microsoft-sql-server-sql-server-management-studio-computer-servers-png%2F0TbRfszw&psig=AOvVaw1vY7lbd-eZyKllc4evdm3d&ust=1665553695417000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOiFhZW91_oCFQAAAAAdAAAAABAJ" 
-        alt="MS SQL">
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/microsoft-sql-server.png" 
+                alt="MS SQL">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.icon-icons.com%2Ficons2%2F2699%2FPNG%2F512%2Fmysql_logo_icon_169941.png&imgrefurl=https%3A%2F%2Ficon-icons.com%2Ficon%2Fmysql-logo%2F169941&tbnid=Yef7W23va16dDM&vet=12ahUKEwjk_PmUvtf6AhUSCDQIHXu3CSoQMygCegUIARDSAQ..i&docid=plbgV1B2C6Mc1M&w=512&h=256&q=MySQL%20icon&ved=2ahUKEwjk_PmUvtf6AhUSCDQIHXu3CSoQMygCegUIARDSAQ" 
-        alt="MySQL">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.python.org%2Fstatic%2Fcommunity_logos%2Fpython-logo-master-v3-TM-flattened.png&imgrefurl=https%3A%2F%2Fwww.python.org%2Fcommunity%2Flogos%2F&tbnid=qL-WVdd5xikuuM&vet=12ahUKEwiq9PCpvtf6AhXdMDQIHX-7AWwQMygCegUIARDvAQ..i&docid=ZIk6oEy_LSc-sM&w=601&h=203&q=Python%20icon&ved=2ahUKEwiq9PCpvtf6AhXdMDQIHX-7AWwQMygCegUIARDvAQ" 
-        alt="Python">
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/mysql.png" 
+                alt="CSS"> alt="MySQL">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.php.net%2Fimages%2Flogos%2Fnew-php-logo.svg&imgrefurl=https%3A%2F%2Fwww.php.net%2Fdownload-logos.php&tbnid=j1itUWnOMiF45M&vet=12ahUKEwjOl8O_vtf6AhW7ATQIHbK8DUUQMygAegUIARDhAQ..i&docid=stZFRta4RJZkvM&w=711&h=384&q=PHP%20icon&ved=2ahUKEwjOl8O_vtf6AhW7ATQIHbK8DUUQMygAegUIARDhAQ" 
-        alt="PHP">
 
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fjs_5968292&psig=AOvVaw1bcbZBPYYStg7exbHfo7SL&ust=1665554104422000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCMDsndi-1_oCFQAAAAAdAAAAABAE" 
-        alt="JavaScript">
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/python-logo.png" 
+                alt="CSS">alt="Python">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.icon-icons.com%2Ficons2%2F2415%2FPNG%2F512%2Fjava_original_wordmark_logo_icon_146459.png&imgrefurl=https%3A%2F%2Ficon-icons.com%2Ficon%2Fjava-original-wordmark-logo%2F146459&tbnid=Y-F2pHG745OGbM&vet=12ahUKEwixvZz_vtf6AhVALzQIHexfD1gQMygDegUIARDqAQ..i&docid=8HVk31ijITHsOM&w=512&h=512&q=Java%20icon&ved=2ahUKEwixvZz_vtf6AhVALzQIHexfD1gQMygDegUIARDqAQ" 
-        alt="Java">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-icons-png.flaticon.com%2F512%2F5968%2F5968242.png&imgrefurl=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fcss-3_5968242&tbnid=6mPxM3K1ngX24M&vet=12ahUKEwjSsuaUv9f6AhX1MTQIHRT1AvcQMygAegUIARDiAQ..i&docid=_c3San-5Uy4CMM&w=512&h=512&q=CSS%20icon&ved=2ahUKEwjSsuaUv9f6AhX1MTQIHRT1AvcQMygAegUIARDiAQ" 
-        alt="CSS">
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/php-logo.svg" 
+                alt="CSS">alt="PHP">
 
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.windowsreport.com%2Fwp-content%2Fuploads%2F2019%2F07%2FFix-power-bi-cant-find-app.jpg&imgrefurl=https%3A%2F%2Fwindowsreport.com%2Fpower-bi-cant-find-app%2F&tbnid=nkjYiN1RvGgm-M&vet=12ahUKEwjgpeCtv9f6AhVRLzQIHUI_DdUQMygBegUIARDPAQ..i&docid=QLf7bmj7RoiUqM&w=1200&h=1200&q=Power%20BI%20icon&ved=2ahUKEwjgpeCtv9f6AhVRLzQIHUI_DdUQMygBegUIARDPAQ" 
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/css-icon.png" 
+                alt="CSS">alt="JavaScript">
+
+
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/css-icon.png" 
+                alt="CSS"> alt="Java">
+
+
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/css-icon.png" 
+                alt="CSS">
+
+        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/power-bi.webp" 
         alt="Power BI">
        <!-- 
         <img src="#" 
