uploading what I have not

--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -13,9 +13,9 @@
                 <a href="index.html">
                     <img class="logo" src="images/circlelogoTemplet.jpg" alt="circlelogoTemplet">
                 </a>
-                <a href="#">page2</a>
-                <a href="site-plan-rafting.html">site plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="page3.html">page3</a>
             </section>
 
             <section id="menu">
