--- a/wwr/page3.html
+++ b/wwr/page3.html
@@ -13,8 +13,8 @@
                 <a href="index.html">
                     <img class="logo" src="images/circlelogoTemplet.jpg" alt="circlelogoTemplet">
                 </a>
-                <a href="#">page1</a>
-                <a href="page2.html">page2</a>
+                <a href="">page1</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="page3.html">page3</a>
             </section>
 
