--- a/wwr/rivers2.html
+++ b/wwr/rivers2.html
@@ -33,8 +33,8 @@
     <div class="div1">
     <h3 >Desolation and Gray Canyon, Utah</h3>   
     </div>
-<div  class="div2">Image here   
-    <!-- <img class="div2" src="images/camping.jpg" alt="tent in the mountain"> -->
+<div  class="div2">Image here   <!-- -->
+    <img class="div2" src="images/camping.jpg" alt="tent in the mountain"> 
     </div>
     <div class="div3"> <img class="icon" src="images/checkmark.jpg" alt="river icon"></div>
     <div class="div4"> <h3>beauty</h3></div>
@@ -71,8 +71,8 @@
             <div class="div1">
             <h3 >Grand Canyon, Arizona</h3>   
             </div>
-        <div  class="div2">Image here   
-            <!-- <img class="div2" src="images/camping.jpg" alt="tent in the mountain"> -->
+        <div  class="div2">Image here   <!-- -->
+            <img class="div2" src="images/camping.jpg" alt="tent in the mountain"> 
             </div>
             <div class="div3"> <img class="icon" src="images/checkmark.jpg" alt="river icon"></div>
             <div class="div4"> <h3>beauty</h3></div>
