--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -45,7 +45,9 @@
         <textarea id="msg" name="user_message"></textarea>
       </li>
   
-      … Hello
+      <li class="button">
+        <button type="submit">Send your message</button>
+      </li>
     </ul>
   </form>
 
