--- a/rune/index.html
+++ b/rune/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Oar River Recreation</title>
+    <title>The Only Rune Splash Page</title>
     <!-- <link rel="stylesheet" href="styles/styles2.css"> -->
     <!-- HTML: https://validator.w3.org/
         CSS: https://jigsaw.w3.org/css-validator/ -->
@@ -19,7 +19,7 @@
     </a>
     <nav>
         <a href="index.html">Home</a>
-        <a href="rivers.html">Bio</a>
+        <a href="bio.html">Bio</a>
         <a href="contactme.html">Contact ME</a>
     </nav>
 
@@ -203,9 +203,10 @@
 
     
     <footer>
-        <p>White Oar River Recreation &copy; 2022 - Rune Larsen</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p>The Only Rune You Know &copy; 2022 - Rune Larsen</p>
+        <p><a href="skills.html">Bio</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
             <p><a href="facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
