--- a/rune/index.html
+++ b/rune/index.html
@@ -204,7 +204,7 @@
     
     <footer>
         <p>The Only Rune You Know &copy; 2022 - Rune Larsen</p>
-        <p><a href="skills.html">Bio</a></p>
+        <p><a href="bio.html">Bio</a></p>
         <p><a href="contactme.html">Contact Us</a></p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
