--- a/rune/index.html
+++ b/rune/index.html
@@ -208,10 +208,10 @@
         <p><a href="contactme.html">Contact Us</a></p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
-            <p><a href="facebook.com" target="_blank">
+            <p><a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a></p>
-            <p><a href="twitter.com" target="_blank">
+            <p><a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a></p>
             <p><a href="https://instagram.com" target="_blank">
