--- a/rune/index.html
+++ b/rune/index.html
@@ -183,19 +183,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="images/index page wireframe.png" alt="home page wireframe">
+      <img src="images/index page wireframe.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="images/Page2 wireframe.png" alt="page 2 wireframe">
+      <img src="images/Page2 wireframe.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="images/Page3 wireframe.png" alt="page 3 wireframe">
+      <img src="images/Page3 wireframe.jpg" alt="page 3 wireframe">
     </main>
  
 
