--- a/rune/site-plan.html
+++ b/rune/site-plan.html
@@ -167,19 +167,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/indexpage_wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Page2_wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Page3_wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
