--- a/rune/index.html
+++ b/rune/index.html
@@ -206,6 +206,7 @@
         <p>The Only Rune You Know &copy; 2022 - Rune Larsen</p>
         <p><a href="bio.html">Bio</a></p>
         <p><a href="contactme.html">Contact Us</a></p>
+        <p><a href="site-planA.html">Site Plan</a></p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
             <p><a href="https://facebook.com" target="_blank">
