--- a/rune/site-planA.html
+++ b/rune/site-planA.html
@@ -221,7 +221,7 @@
           <p><a href="bio.html">Bio</a></p>
           <p><a href="contactme.html">Contact Us</a></p>
           <p><a href="site-planA.html">Site Plan</a></p>
-          <p><a href="site-plan.html">Site Plan</a></p>
+          <p><a href="site-plan.html">Site PlanA</a></p>
           <div class="social">
               <p><a href="https://facebook.com" target="_blank">
                   <img src="images/facebook.png" alt="fb icon">
