--- a/rune/site-planA.html
+++ b/rune/site-planA.html
@@ -10,12 +10,20 @@
 
   <body>
     <header>
+      <nav>
+          <a href="index.html">Home</a>
+          <a href="bio.html">Bio</a>
+          <a href="contactme.html">Contact ME</a>
+          <a href="site-planA.html">siteplan</a>
+      </nav>
       <h1>The Only Rune site Plan</h1>
  
       <h2>Rune Larsen</h2>
       <h2>WDD 130-30</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
+
+    
     <main>
 
       <!-- ------------------------Steps 2-3------------------------------ -->
