--- a/rune/contactme.html
+++ b/rune/contactme.html
@@ -8,14 +8,14 @@
     <!-- <link rel="stylesheet" href="styles/styles2.css"> -->
     <!-- HTML: https://validator.w3.org/
         CSS: https://jigsaw.w3.org/css-validator/ -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
     </head>
 <body>
     <div id="content">
 <header >
                 
     <a id="logo_link" href="index.html"> 
-         <img src="images/personal-site-logo.png" alt="Rune Logo image">
+         <img src="images/rune-tri-logo.png" alt="Rune Logo image">
     </a>
     <nav>
         <a href="index.html">Home</a>
@@ -25,7 +25,31 @@
 
 </header>
 
+<h3>Contact Form</h3>
 
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+	
+    <label for="email">Email Adress</label>
+    <input type="text" id="email" name="email" placeholder="Your email..">
+
+    <label for="email">Phone</label>
+    <input type="text" id="phone" name="phone" placeholder="Your phone number..">
+
+    <label for="email">Company</label>
+    <input type="text" id="company" name="company" placeholder="Your company..">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
 
   
 <footer>
