--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
-    <div id="content">
+    <div id="content2">
 <header >
                 
     <a id="logo_link" href="index.html">
