--- a/rune/index.html
+++ b/rune/index.html
@@ -41,19 +41,19 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="images/facebook_icon.png" style="width:200px">
+    <img src="images/Rune1.jpg" style="width:200px">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="images/instagram.png" style="width:200px">
+    <img src="images/Rune2.jpg" style="width:200px">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="images/twitter.png" style="width:200px">
+    <img src="images/Rune3.jpg" style="width:200px">
     <div class="text">Caption Three</div>
   </div>
 
