--- a/rune/site-planA.html
+++ b/rune/site-planA.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/site-plan3.css">
   </head>
 
   <body>
@@ -43,7 +43,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/personal-site-logo.png" alt="Rune Logo image">
+      <img src="images/rune-tri-logo.png" alt="Rune Logo image">
       <hr>
       <h2>
         Style Guide
@@ -159,36 +159,31 @@
         [Contact me by sending me an email, text, or even forward my resume to someone you think would appriciate my talents.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/Oracle-PL-SQL.png" 
-        alt="ORACLE PL/SQL">
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/microsoft-sql-server.png" 
-                alt="MS SQL">
-
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/mysql.png" 
-                alt="CSS"> alt="MySQL">
-
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/python-logo.png" 
-                alt="CSS">alt="Python">
-
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/php-logo.svg" 
-                alt="CSS">alt="PHP">
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/css-icon.png" 
-                alt="CSS">alt="JavaScript">
-
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/css-icon.png" 
-                alt="CSS"> alt="Java">
-
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/css-icon.png" 
-                alt="CSS">
-
-        <img src="https://raw.githubusercontent.com/theonlyruneyouknow/wwd130/main/wwr/images/power-bi.webp" 
-        alt="Power BI">
+      <div class="row">
+        <div class="column">
+          <img class=logo src="images/css-icon.png" alt="css Logo image" style="width:100%">
+        </div>
+        <div class="column">
+    <img class=logo src="images/js copy.png" alt="js Logo image"style="width:100%">
+</div>
+ <div class="column">
+    <img class=logo src="images/php-logo copy.svg" alt="PHP Logo image"style="width:100%">
+</div>
+<div class="column"> 
+    <img class=logo src="images/mysql.png" alt="css Logo image"style="width:100%">
+</div>
+     <div class="column">
+    <img class=logo src="images/Oracle-PL-SQL.png" alt="Oracle-PL-SQL Logo image"style="width:100%">
+</div>
+ <div class="column"> 
+    <img class=logo src="images/microsoft-sql-server copy.png" alt="MSSQL Logo image"style="width:100%">
+</div>
+<div class="column">
+          <img class=logo src="images/python-logo copy 2.png" alt="Python Logo image" style="width:100%">
+        </div>
+ <div class="column"> 
+    <img class=logo src="images/power-bi copy.webp" alt="Power BI Logo image"style="width:100%">
+</div>
        <!-- 
         <img src="#" 
         alt="image for page3">
