--- a/rune/index.html
+++ b/rune/index.html
@@ -100,7 +100,7 @@
         }
         </script>
       
-      <!-- --  - -- - --Content Section - -- -- - - -- - -- -- -->
+      <!--Content Section -->
      </main>
            
       <footer>
