--- a/rune/index.html
+++ b/rune/index.html
@@ -42,19 +42,19 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="images/Rune1.jpg" alt="Image of Rune" style="width:200px">
-    <div class="text">Caption Text</div>
+    <div class="text">Rune #1</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
     <img src="images/Rune2.jpg" alt="Image of Rune" style="width:200px">
-    <div class="text">Caption Two</div>
+    <div class="text">Rune #Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
     <img src="images/Rune3.jpg" alt="Image of Rune" style="width:200px">
-    <div class="text">Caption Three</div>
+    <div class="text">Rune #Three</div>
   </div>
 
   <!-- Next and previous buttons -->
